# net-gazer-sensor

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
docs/: use-case-nfqueue.md  use-case-vpn-host-with-no-vpn-running.md  use-case-with-all-ipv4-plugin.md
etc/misc/logrotate/: net-gazer
etc/misc/pkg-scripts/: postinst  postrm  preinst  prerm
etc/misc/rsyslog.d/: 60-net-gazer.conf
etc/misc/systemd/: net-gazer.service
etc/net-gazer/: net-gazer.toml
lib-comm/: Cargo.toml  make.sh  messaging.fbs
lib-comm/src/: lib.rs  messaging_generated.rs
lib-data/: Cargo.toml
lib-data/src/: conf.rs  context.rs  errors.rs  lib.rs  tests.rs  utils.rs
lib-data/tests/: test-01.rs
lib-fbuffers/: Cargo.toml  make.sh  traceroute.fbs
lib-fbuffers/src/: lib.rs  traceroute_generated.rs
lib-plugins/: Cargo.toml
lib-plugins/src/: lib.rs
lib-tracer/: Cargo.toml
lib-tracer/src/: consume.rs  lib.rs  traceroute.rs
src/: conf.rs  main.rs
tests/: integration_01.rs
