[package]
publish = false
name = "net-gazer"
version = "0.1.0"
authors = ["Serguei Oleinik <162591+soleinik@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/soleinik/net-gazer-sensor"
description = "net-gazer - packet inspection framework, core component to run plugins"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members=[
    "lib-tracer",
    "lib-data",
    "lib-fbuffers",
    "lib-comm",
    "lib-plugins",
]

[dependencies]
lib-tracer = { path="./lib-tracer" }
lib-data = { path="./lib-data" }
lib-fbuffers = { path="./lib-fbuffers" }
lib-comm = { path="./lib-comm" }
lib-plugins = { path="./lib-plugins" }



log = "0.4.8"
env_logger = "0.7.1"

pnet = "0.25.0"
ipnetwork = "^0.15.0"

async-std = { version = "1.5.0", default-features = true, features = ["attributes"] }
#futures = "0.3"

bitflags = "1.2.1"



[package.metadata.deb]
depends = "$auto,systemd,rsyslog"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/net-gazer", "usr/local/bin/", "755"],
    # config
    ["etc/net-gazer/net-gazer.toml", "usr/local/etc/net-gazer/net-gazer.toml", "644"],
    # systemd unit
    ["etc/misc/systemd/net-gazer.service", "lib/systemd/system/", "644"],
    # rsyslog.d
    ["etc/misc/rsyslog.d/60-net-gazer.conf", "etc/rsyslog.d/", "644"],

    # assets
    ["LICENSE", "/usr/share/doc/net-gazer/", "644"],
]

maintainer-scripts = "etc/misc/pkg-scripts"
conf-files=[
    "usr/local/etc/net-gazer/net-gazer.toml",
]

