[package]
name = "lib-comm"
version = "0.1.0"
authors = ["soleinik <162591+soleinik@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net-gazer-core = { git = "https://github.com/soleinik/net-gazer-core", branch = "master"}
lib-data = { path="../lib-data" }


log = "0.4"

flatbuffers = "24.3"
#ureq = { version = "2.10.1", default-features = false,  features = ["rustls"] }
ureq = { version = "2.10.1", default-features = false,  features = ["tls"] }
async-std = { version="1.4", default-features = true, features=["attributes"] }
