[package]
name = "lib-data"
version = "0.1.0"
authors = ["Serguei Oleinik <162591+soleinik@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
log = "0.4.8"

serde = { version="1.0.104", default-features = true, features=["derive"] }
serde_json = "1.0"

structopt = "0.3.9"
config = "0.10.1"
pnet = "0.25.0"
