[package]
name = "lib-plugins"
version = "0.1.0"
authors = ["soleinik <162591+soleinik@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net-gazer-core = { git = "https://github.com/soleinik/net-gazer-core", branch = "master"}


log = "0.4.8"
pnet = "0.25.0"
libloading = "0.5.2"
