[package]
name = "lib-tracer"
version = "0.1.0"
authors = ["Serguei Oleinik <162591+soleinik@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-data = { path="../lib-data" }
lib-fbuffers = { path="../lib-fbuffers" }


log = "0.4.8"
pnet = "0.23"


async-std = { version="1.4", default-features = true, features=["attributes"] }

crossbeam-deque = "0.7"

#maxminddb = "0.13.0"
